--- a/dotfiles/zsh/config
+++ b/dotfiles/zsh/config
@@ -60,7 +60,7 @@ setopt share_history        # share command history data
 setopt HIST_IGNORE_SPACE
 setopt APPEND_HISTORY # write history only when closing
 setopt EXTENDED_HISTORY # add more info
-
+setopt extended_glob
 # Other tabbing options
 # setopt NO_AUTO_MENU
 # setopt BASH_AUTO_LIST
