--- a/.gitmodules
+++ b/.gitmodules
@@ -19,6 +19,15 @@
 [submodule "dotfiles/vim/bundle/vim-vividchalk"]
 	path = dotfiles/vim/bundle/vim-vividchalk
 	url = http://github.com/tpope/vim-vividchalk.git
+[submodule "dotfiles/vim/bundle/tcomment"]
+	path = dotfiles/vim/bundle/tcomment
+	url = http://github.com/tomtom/tcomment_vim.git
+[submodule "dotfiles/vim/bundle/supertab"]
+	path = dotfiles/vim/bundle/supertab
+	url = http://github.com/ervandew/supertab.git
 [submodule "dotfiles/vim/bundle/snipmate"]
 	path = dotfiles/vim/bundle/snipmate
 	url = git@github.com:jbgutierrez/snipmate.vim.git
+[submodule "dotfiles/vim/bundle/command-t"]
+	path = dotfiles/vim/bundle/command-t
+	url = git://git.wincent.com/command-t.git
