--- a/.gitmodules
+++ b/.gitmodules
@@ -42,3 +42,18 @@
 	path = dotfiles/vim/bundle/command-t
 	url = http://github.com/wincent/Command-T.git
   ignore = untracked
+[submodule "dotfiles/vim/bundle/vim-textobj-user"]
+	path = dotfiles/vim/bundle/vim-textobj-user
+	url = https://github.com/kana/vim-textobj-user.git
+  ignore = untracked
+[submodule "dotfiles/vim/bundle/vim-textobj-rubyblock"]
+	path = dotfiles/vim/bundle/vim-textobj-rubyblock
+	url = https://github.com/nelstrom/vim-textobj-rubyblock.git
+  ignore = untracked
+[submodule "dotfiles/vim/bundle/vim-ruby-refactoring"]
+	path = dotfiles/vim/bundle/vim-ruby-refactoring
+	url = https://github.com/ecomba/vim-ruby-refactoring.git
+  ignore = untracked
+[submodule "dotfiles/vim/bundle/tabular"]
+	path = dotfiles/vim/bundle/tabular
+	url = https://github.com/godlygeek/tabular.git
