--- a/dotfiles/zsh/config
+++ b/dotfiles/zsh/config
@@ -88,3 +88,5 @@ WORDCHARS=${WORDCHARS//[&=\/;\!#%\{]}
 
 bindkey -e
 
+# Ruby version manager
+if which rbenv > /dev/null; then eval "$(rbenv init -)"; fi
