--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "dotfiles/vim/snippets"]
-	path = dotfiles/vim/snippets
-	url = https://github.com/scrooloose/snipmate-snippets.git
 [submodule "dotfiles/vim/bundle/vim-surround"]
 	path = dotfiles/vim/bundle/vim-surround
 	url = https://github.com/tpope/vim-surround.git
@@ -25,9 +22,6 @@
 [submodule "dotfiles/vim/bundle/supertab"]
 	path = dotfiles/vim/bundle/supertab
 	url = https://github.com/ervandew/supertab.git
-[submodule "dotfiles/vim/bundle/snipmate"]
-	path = dotfiles/vim/bundle/snipmate
-	url = https://github.com/msanders/snipmate.vim.git
 [submodule "dotfiles/vim/bundle/command-t"]
 	path = dotfiles/vim/bundle/command-t
 	url = https://github.com/wincent/Command-T.git
@@ -52,15 +46,6 @@
 [submodule "dotfiles/vim/bundle/vim-repeat"]
 	path = dotfiles/vim/bundle/vim-repeat
 	url = https://github.com/tpope/vim-repeat.git
-[submodule "dotfiles/vim/bundle/vim-pastie"]
-	path = dotfiles/vim/bundle/vim-pastie
-	url = https://github.com/tpope/vim-pastie.git
-[submodule "dotfiles/vim/bundle/asp.net"]
-	path = dotfiles/vim/bundle/asp.net
-	url = https://github.com/vim-scripts/asp.net.git
-[submodule "dotfiles/vim/bundle/simplefold"]
-	path = dotfiles/vim/bundle/simplefold
-	url = https://github.com/vim-scripts/simplefold.git
 [submodule "dotfiles/vim/bundle/vim-css-color"]
 	path = dotfiles/vim/bundle/vim-css-color
 	url = https://github.com/skammer/vim-css-color.git
@@ -76,18 +61,12 @@
 [submodule "dotfiles/vim/bundle/gundo"]
 	path = dotfiles/vim/bundle/gundo
 	url = https://github.com/sjl/gundo.vim.git
-[submodule "dotfiles/vim/bundle/vim-snippets.mootols"]
-	path = dotfiles/vim/bundle/vim-snippets.mootols
-	url = https://github.com/zalun/vim-snippets.mootools.git
 [submodule "dotfiles/vim/bundle/html5.vim"]
 	path = dotfiles/vim/bundle/html5.vim
 	url = https://github.com/othree/html5.vim.git
 [submodule "dotfiles/vim/bundle/xml.vim"]
 	path = dotfiles/vim/bundle/xml.vim
 	url = https://github.com/othree/xml.vim.git
-[submodule "dotfiles/vim/bundle/css-snippets-snipmate/snippets"]
-	path = dotfiles/vim/bundle/css-snippets-snipmate/snippets
-	url = https://github.com/tisho/css-snippets-snipmate.git
 [submodule "dotfiles/vim/bundle/vim-markdown"]
 	path = dotfiles/vim/bundle/vim-markdown
 	url = https://github.com/peplin/vim-markdown.git
@@ -145,3 +124,6 @@
 [submodule "dotfiles/vim/bundle/vim-powerline"]
 	path = dotfiles/vim/bundle/vim-powerline
 	url = https://github.com/Lokaltog/vim-powerline.git
+[submodule "dotfiles/vim/bundle/neosnippet"]
+	path = dotfiles/vim/bundle/neosnippet
+	url = https://github.com/Shougo/neosnippet.git
