--- a/dotfiles/zsh/config
+++ b/dotfiles/zsh/config
@@ -2,17 +2,17 @@ autoload -U colors; colors
 setopt prompt_subst
 # set some colors
 for COLOR in RED GREEN YELLOW MAGENTA; do
-  eval PR_$COLOR='%{$fg[${(L)COLOR}]%}'        
+  eval PR_$COLOR='%{$fg[${(L)COLOR}]%}'
   eval PR_BRIGHT_$COLOR='%{$fg_bold[${(L)COLOR}]%}'
 done
-PR_RESET="%{${reset_color}%}";  
+PR_RESET="%{${reset_color}%}";
 
 refresh_git_status() {
   unstaged=false staged=false stashed=false
-  if [[ $(git diff --cached --name-status 2>/dev/null ) != "" ]]; then
+  if [[ $(git diff --ignore-submodules=dirty --cached --name-status 2>/dev/null ) != "" ]]; then
     staged=true
   fi
-  if [[ $(git diff --name-status 2>/dev/null ) != "" ]]; then
+  if [[ $(git diff --ignore-submodules=dirty --name-status 2>/dev/null ) != "" ]]; then
     unstaged=true
   fi
   if [[ $(git stash list) != "" ]]; then
