--- a/.gitmodules
+++ b/.gitmodules
@@ -1,120 +1,3 @@
-[submodule "dotfiles/vim/bundle/vim-surround"]
-	path = dotfiles/vim/bundle/vim-surround
-	url = https://github.com/tpope/vim-surround.git
-[submodule "dotfiles/vim/bundle/vim-rails"]
-	path = dotfiles/vim/bundle/vim-rails
-	url = https://github.com/tpope/vim-rails.git
-[submodule "dotfiles/vim/bundle/vim-haml"]
-	path = dotfiles/vim/bundle/vim-haml
-	url = https://github.com/tpope/vim-haml.git
-[submodule "dotfiles/vim/bundle/vim-ruby"]
-	path = dotfiles/vim/bundle/vim-ruby
-	url = https://github.com/vim-ruby/vim-ruby.git
-[submodule "dotfiles/vim/bundle/vim-ragtag"]
-	path = dotfiles/vim/bundle/vim-ragtag
-	url = https://github.com/tpope/vim-ragtag.git
-[submodule "dotfiles/vim/bundle/vim-vividchalk"]
-	path = dotfiles/vim/bundle/vim-vividchalk
-	url = https://github.com/tpope/vim-vividchalk.git
-[submodule "dotfiles/vim/bundle/tcomment"]
-	path = dotfiles/vim/bundle/tcomment
-	url = https://github.com/tomtom/tcomment_vim.git
-[submodule "dotfiles/vim/bundle/supertab"]
-	path = dotfiles/vim/bundle/supertab
-	url = https://github.com/ervandew/supertab.git
-[submodule "dotfiles/vim/bundle/command-t"]
-	path = dotfiles/vim/bundle/command-t
-	url = https://github.com/wincent/Command-T.git
-[submodule "dotfiles/vim/bundle/vim-textobj-user"]
-	path = dotfiles/vim/bundle/vim-textobj-user
-	url = https://github.com/kana/vim-textobj-user.git
-[submodule "dotfiles/vim/bundle/vim-textobj-rubyblock"]
-	path = dotfiles/vim/bundle/vim-textobj-rubyblock
-	url = https://github.com/nelstrom/vim-textobj-rubyblock.git
-[submodule "dotfiles/vim/bundle/vim-ruby-refactoring"]
-	path = dotfiles/vim/bundle/vim-ruby-refactoring
-	url = https://github.com/ecomba/vim-ruby-refactoring.git
-[submodule "dotfiles/vim/bundle/tabular"]
-	path = dotfiles/vim/bundle/tabular
-	url = https://github.com/godlygeek/tabular.git
-[submodule "dotfiles/vim/bundle/vim-unimpaired"]
-	path = dotfiles/vim/bundle/vim-unimpaired
-	url = https://github.com/tpope/vim-unimpaired.git
-[submodule "dotfiles/vim/bundle/vim-endwise"]
-	path = dotfiles/vim/bundle/vim-endwise
-	url = https://github.com/tpope/vim-endwise.git
-[submodule "dotfiles/vim/bundle/vim-repeat"]
-	path = dotfiles/vim/bundle/vim-repeat
-	url = https://github.com/tpope/vim-repeat.git
-[submodule "dotfiles/vim/bundle/vim-css-color"]
-	path = dotfiles/vim/bundle/vim-css-color
-	url = https://github.com/skammer/vim-css-color.git
-[submodule "dotfiles/vim/bundle/vim-coffee-script"]
-	path = dotfiles/vim/bundle/vim-coffee-script
-	url = https://github.com/kchmck/vim-coffee-script.git
-[submodule "dotfiles/vim/bundle/vim-gtd"]
-	path = dotfiles/vim/bundle/vim-gtd
-	url = https://github.com/jbgutierrez/vim-gtd.git
-[submodule "dotfiles/vim/bundle/vim-fugitive"]
-	path = dotfiles/vim/bundle/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
-[submodule "dotfiles/vim/bundle/gundo"]
-	path = dotfiles/vim/bundle/gundo
-	url = https://github.com/sjl/gundo.vim.git
-[submodule "dotfiles/vim/bundle/html5.vim"]
-	path = dotfiles/vim/bundle/html5.vim
-	url = https://github.com/othree/html5.vim.git
-[submodule "dotfiles/vim/bundle/xml.vim"]
-	path = dotfiles/vim/bundle/xml.vim
-	url = https://github.com/othree/xml.vim.git
-[submodule "dotfiles/vim/bundle/vim-markdown"]
-	path = dotfiles/vim/bundle/vim-markdown
-	url = https://github.com/peplin/vim-markdown.git
-[submodule "dotfiles/vim/bundle/vim-javascript"]
-	path = dotfiles/vim/bundle/vim-javascript
-	url = https://github.com/pangloss/vim-javascript.git
-[submodule "dotfiles/vim/bundle/matchit"]
-	path = dotfiles/vim/bundle/matchit
-	url = https://github.com/vim-scripts/matchit.zip
-[submodule "dotfiles/vim/bundle/ack.vim"]
-	path = dotfiles/vim/bundle/ack.vim
-	url = https://github.com/mileszs/ack.vim
-[submodule "dotfiles/vim/bundle/vim-scratch"]
-	path = dotfiles/vim/bundle/vim-scratch
-	url = https://github.com/duff/vim-scratch.git
-[submodule "dotfiles/vim/bundle/vim-autoclose"]
-	path = dotfiles/vim/bundle/vim-autoclose
-	url = https://github.com/Townk/vim-autoclose.git
-[submodule "dotfiles/vim/bundle/tagbar"]
-	path = dotfiles/vim/bundle/tagbar
-	url = https://github.com/majutsushi/tagbar
-[submodule "dotfiles/vim/bundle/syntastic"]
-	path = dotfiles/vim/bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
-[submodule "dotfiles/vim/bundle/vim-abolish"]
-	path = dotfiles/vim/bundle/vim-abolish
-	url = https://github.com/tpope/vim-abolish
-[submodule "dotfiles/vim/bundle/vim-colors-solarized"]
-	path = dotfiles/vim/bundle/vim-colors-solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
-[submodule "dotfiles/vim/bundle/detectindent"]
-	path = dotfiles/vim/bundle/detectindent
-	url = https://github.com/ciaranm/detectindent.git
-[submodule "dotfiles/vim/bundle/setcolors.vim"]
-	path = dotfiles/vim/bundle/setcolors.vim
-	url = https://github.com/felixhummel/setcolors.vim
-[submodule "dotfiles/vim/bundle/jshint.vim"]
-	path = dotfiles/vim/bundle/jshint.vim
-	url = https://github.com/walm/jshint.vim
-[submodule "dotfiles/vim/bundle/vim-jsbeautify"]
-	path = dotfiles/vim/bundle/vim-jsbeautify
-	url = https://github.com/maksimr/vim-jsbeautify.git
-[submodule "dotfiles/vim/bundle/vim-indent-guides"]
-	path = dotfiles/vim/bundle/vim-indent-guides
-	url = https://github.com/nathanaelkane/vim-indent-guides.git
-[submodule "dotfiles/vim/bundle/zencoding-vim"]
-	path = dotfiles/vim/bundle/zencoding-vim
-	url = https://github.com/mattn/zencoding-vim.git
-[submodule "dotfiles/vim/bundle/vim-powerline"]
-	path = dotfiles/vim/bundle/vim-powerline
-	url = https://github.com/Lokaltog/vim-powerline.git
+[submodule "dotfiles/vim/bundle/vundle"]
+	path = dotfiles/vim/bundle/vundle
+	url = https://github.com/gmarik/vundle.git
