tmux clipboard configuration

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -4,7 +4,15 @@ setw -g mode-keys vi
 # mouse behavior
 setw -g mode-mouse off
 
-# key bindings
+# remmapping copy and paste keys
+unbind [
+bind Enter copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
+# more custom key bindings
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind | split-window -h
 bind - split-window -v
@@ -24,7 +32,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # UTF8 characters in status bar
-set-option -g status-utf8 on
+set -g status-utf8 on
 
 # center window list
 set -g status-justify centre
@@ -33,9 +41,23 @@ set -g status-justify centre
 set -g default-terminal screen-256color
 
 # left and right status bar
-set-option -g status-left ' #S ⡇' # session name
-set-option -g status-left-length 20
-set-option -g status-right '⡇ #H ' # host name
+set -g status-left ' #S ⡇' # session name
+set -g status-left-length 20
+set -g status-right '⡇ #H ' # host name
+
+# Enable native Mac OS X copy/paste
+#
+#  $ git clone https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard.git
+#  $ cd tmux-MacOSX-pasteboard/
+#  $ make reattach-to-user-namespace
+#  $ sudo mv reattach-to-user-namespace /usr/local/bin
+#
+set -g default-command "reattach-to-user-namespace -l zsh"
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+
+# recording program output to a log
+bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
 # load project specific settings
 if-shell 'test -f "~/.tmux.conf.local"' 'source-file ~/.tmux.conf.local'
