launch tmux by default

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -12,6 +12,10 @@ bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
+# zsh
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
+
 # more custom key bindings
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind | split-window -h
