--- a/dotfiles/zsh/config
+++ b/dotfiles/zsh/config
@@ -1,7 +1,11 @@
 # show elapsed time if command took more than X seconds
 REPORTTIME=10
+
 # ask to complete if top of list would scroll off screen
 LISTMAX=0
+
+# reduce delay between mode changes from 0.4 (default) to 0.1 seconds
+KEYTIMEOUT=1
 
 # command history configuration
 HISTFILE=$HOME/.zsh_history
@@ -22,7 +26,22 @@ PR_RESET="%{${reset_color}%}";
 
 PROMPT='${PR_MAGENTA}$(date +%H:%M) %~ $(git_info)${PR_RESET}
 → '
-RPROMPT='%U${PR_WHITE}$(git_log)%u${PR_RESET}'
+RPROMPT='%U${PR_WHITE}$(git_log)%u${PR_RESET}${vi_mode}'
+
+vi_ins_mode=""
+vi_cmd_mode="[CMD]"
+vi_mode=$vi_ins_mode
+
+zle-keymap-select() {
+  vi_mode="${${KEYMAP/vicmd/${vi_cmd_mode}}/(main|viins)/${vi_ins_mode}}"
+  zle reset-prompt
+}
+zle -N zle-keymap-select
+
+zle-line-finish() {
+  vi_mode=$vi_ins_mode
+}
+zle -N zle-line-finish
 
 # turn on command substitution in the prompt
 setopt prompt_subst
@@ -104,7 +123,31 @@ zstyle ':completion:*:*:*:*:processes' command "ps -u `whoami` -o pid,user,comm 
 zstyle ':completion:*:ssh:*' tag-order hosts users
 zstyle ':completion:*:ssh:*' group-order hosts-domain hosts-host users hosts-ipaddr
 
-bindkey -e
+# Vi mode
+bindkey -v
+
+# Use vim cli mode
+bindkey '^P' up-history
+bindkey '^N' down-history
+
+# ctrl-w removed word backwards
+bindkey '^w' backward-kill-word
+
+# ctrl-r starts searching history backward
+bindkey '^r' history-incremental-search-backward
+bindkey '^f' history-incremental-search-forward
+
+# undo/redo
+bindkey -M vicmd 'u' undo
+bindkey -M vicmd '^r' redo
+
+# common console mappings
+bindkey -M viins '^a' beginning-of-line
+bindkey -M vicmd '^a' beginning-of-line
+bindkey -M viins '^e' end-of-line
+bindkey -M vicmd '^e' end-of-line
+bindkey -M viins '^k' kill-line
+bindkey -M vicmd '^k' kill-line
 
 # ruby version manager
 if which rbenv > /dev/null; then eval "$(rbenv init -)"; fi
