--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,16 +1,36 @@
+# Set that stupid Esc-Wait off, so VI works again
+set -sg  escape-time 0
+
 # vi is good
 setw -g mode-keys vi
 
 # mouse behavior
 setw -g mode-mouse off
 
+## always load the reset file first
+# unbind-key -a
+## always load the reset file first
+# source-file ~/.tmux.reset.conf
+
 # remmapping copy and paste keys
 unbind [
 bind Enter copy-mode
 unbind p
 bind p paste-buffer
+
+# Setup 'v' to begin selection as in Vim
 bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Increase history limit
+set -g history-limit 10000
+
+# Enable Mac OS X clipboard
+set -g default-command "reattach-to-user-namespace -l zsh"
 
 # zsh
 set -g default-command /bin/zsh
@@ -42,12 +62,32 @@ set -g status-utf8 on
 set -g status-justify centre
 
 # terminal colors
-set -g default-terminal screen-256color
+set -g default-terminal "screen-256color"
+
+set -g status-fg white
+set -g status-bg black
+
+setw -g window-status-fg colour108 # colour108 is an olive color
+setw -g window-status-bg default
+setw -g window-status-attr dim
+
+setw -g window-status-current-fg colour156 # colour156 is a lime green color
+setw -g window-status-current-bg default
+setw -g window-status-current-attr bright
+
+set -g pane-border-fg colour108
+set -g pane-border-bg default
+set -g pane-active-border-fg colour156
+set -g pane-active-border-bg default
+
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
 
 # left and right status bar
 set -g status-left ' #S ⡇' # session name
 set -g status-left-length 20
-set -g status-right '⡇ #H ' # host name
+set -g status-right '#(sysctl vm.loadavg | cut -b 14-29)⡇ #H ' # host name
 
 # Enable native Mac OS X copy/paste
 #
