--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dotfiles/vim/bundle/vundle"]
-	path = dotfiles/vim/bundle/vundle
+[submodule "vim/bundle/vundle"]
+	path = vim/bundle/vundle
 	url = https://github.com/gmarik/vundle.git
